# xserver

./: Makefile.am  configure.ac  index.html  setup.bz2
dix/: dixfonts.c  getevents.c
doc/: Xserver.man.pre
glx/: Makefile.am  glxdriswrast.c  single2.c
hw/kdrive/ephyr/: Makefile.am  ephyrinit.c
hw/kdrive/src/: Makefile.am
hw/xwin/: InitInput.c  InitOutput.c  Makefile.am  win.h  winblock.c  winclipboardthread.c  winclipboardwndproc.c  winclipboardwrappers.c  winclipboardxevents.c  winconfig.c  wincursor.c  windialogs.c  winglobals.c  winglobals.h  winime.c  winimedefs.h  winimewrap.c  winkeybd.c  winkeyhook.c  winmouse.c  winmsg.c  winmsgwindow.c  winmultiwindowicons.c  winmultiwindowshape.c  winmultiwindowwindow.c  winmultiwindowwm.c  winmultiwindowwndproc.c  winprocarg.c  winscrinit.c  winwakeup.c  winwin32rootlesswndproc.c  winwindowswm.c  winwndproc.c
hw/xwin/kinput2-v3.1/: Imakefile  Kinput2.conf  Kinput2.conf.canna-wnn4  Kinput2.conf.wnn4  Kinput2imm32  Makefile.am  NEWS  README  patchlevel.h
hw/xwin/kinput2-v3.1/ccdef/: Imakefile  ccdef.kinput2.egg  rule.eggfunc  rule.func  rule.hiragana.egg  rule.kana2  rule.katakana.egg  rule.kigou.egg
hw/xwin/kinput2-v3.1/client/: convlib.c
hw/xwin/kinput2-v3.1/cmd/: Imakefile  Kinput2.ad  Kinput2imm32.ad  kinput2.c  kinput2.man
hw/xwin/kinput2-v3.1/doc/: ccdef  protocol  sj3def
hw/xwin/kinput2-v3.1/include/: Atok.h  AtokP.h  CachedAtom.h  CachedFont.h  CandPanel.h  CandPanelP.h  Canna.h  CannaP.h  CcWnn.h  CcWnnP.h  ConvCtrl.h  ConvCtrlP.h  ConvDisp.h  ConvDispP.h  ConvProto.h  DebugPrint.h  ICtypes.h  IMProtoP.h  IOECall.h  InputConv.h  InputConvP.h  MyDispatch.h  OffConvP.h  OnConv.h  OnConvP.h  OverConv.h  OverConvP.h  Sj3.h  Sj3P.h  WStr.h  WcharDisp.h  WcharDispP.h  WinIMM32.h  WinIMM32P.h  WinIMMDefs.h  XWStr.h  Xatoklib.h  XimpProtoP.h  Xsj3clib.h  cconv.h  (+1 more)
hw/xwin/kinput2-v3.1/lib/: Atok.c  AuxPanel.c  Canna.c  CcWnn.c  ConvCtrl.c  ConvDisp.c  IMProto.c  Imakefile  InputConv.c  KIMProto.c  KIProto.c  Makefile.am  OffConv.c  OnConv.c  OverConv.c  Sj3.c  WcharDisp.c  WinIMM32.c  XimpProto.c  asyncerr.c  cconv.c  ctext.c  dispatch.c  ioecall.c  wnnlib.c  xtwstr.c  xwstr.c
hw/xwin/kinput2-v3.1/lib/Xatoklib/: Imakefile  README  aux_.c  buffer.c  compstr.c  event.c  if.c  key.c  key_def.h  misc.c  segment.c  sysline.c
hw/xwin/kinput2-v3.1/lib/imlib/: Imakefile  im.h  imattr.c  imconv.c  imdata.c  imdispatch.c  imfuncs.h  imic.c  imrequest.c  imxport.c  imxport.h
hw/xwin/winime/: Imakefile  Makefile.am  winime.c  winime.h  winimestr.h
hw/xwin/wmutil/: winvkmap.h
include/: eventstr.h
mi/: mipointer.c
miext/rootless/: rootlessWindow.c
os/: utils.c
release/xorg-server-imm32/: setup.hint  xorg-server-imm32-1.11.4-5a-src.tar.bz2  xorg-server-imm32-1.11.4-5a.tar.bz2  xorg-server-imm32-1.11.4-5b-src.tar.bz2  xorg-server-imm32-1.11.4-5b.tar.bz2  xorg-server-imm32-1.13.1-1a-src.tar.bz2
release/xorg-server-imm32/xorg-server-imm32-dmx/: setup.hint  xorg-server-imm32-dmx-1.11.4-5a.tar.bz2  xorg-server-imm32-dmx-1.11.4-5b.tar.bz2
snapshot/: xserver-cygwin-imm32-1.11.4-5a.tar.bz2  xserver-cygwin-imm32-1.11.4-5b.tar.bz2  xserver-cygwin-imm32-1.13.1-1a.tar.bz2
xkb/: xkbAccessX.c  xkbActions.c  xkbInit.c
